@@ -15,9 +15,7 @@
 ### BEGIN INIT INFO
 # Provides:            saslauthd
 # Required-Start:      $local_fs
-# Should-Start:
 # Required-Stop:       $local_fs
-# Should-Stop:
 # Default-Start:       2 3 4 5
 # Default-Stop:        0 1 6
 # Short-Description:   saslauthd startup script
@@ -27,9 +25,14 @@
 ### END INIT INFO
 
 . /lib/lsb/init-functions
-. /etc/sysconfig/cyrus-sasl
 
-DAEMON="/usr/sbin/saslauthd -a $AUTHMECH $OPTIONS"
+START="no"
+AUTHMECH=""
+OPTIONS=""
+
+if [ -f "/etc/sysconfig/cyrus-sasl" ]; then
+   . /etc/sysconfig/cyrus-sasl
+fi
 
 case "${1}" in
    start)
@@ -51,7 +54,7 @@ case "${1}" in
       fi
 
       log_info_msg "Starting SASL Authentication Daemon saslauthd"
-      start_daemon ${DAEMON}
+      start_daemon /usr/sbin/saslauthd -a $AUTHMECH $OPTIONS
       ;;
 
    stop)
@@ -65,8 +68,12 @@ case "${1}" in
       ${0} start
       ;;
 
+   status)
+      statusproc /usr/sbin/saslauthd
+      ;;
+
    *)
-      echo "Usage: ${0} {start|stop|restart}"
+      echo "Usage: ${0} {start|stop|restart|status}"
       exit 1
       ;;
  esac
