@@ -1,0 +1,72 @@
+#!/bin/sh
+########################################################################
+# Begin openldap
+#
+# Description : OpenLDAP Boot Script
+#
+# Authors     : Armin K. <krejzi@email.com>
+#
+# Version     : BLFS SVN
+#
+# Notes       : Can be configured through /etc/sysconfig/openldap.
+#
+########################################################################
+
+### BEGIN INIT INFO
+# Provides:          openldap
+# Required-Start:    $remote_fs $network $syslog
+# Required-Stop:     $remote_fs $network $syslog
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: OpenLDAP standalone server
+# X-LFS-Provided-By: BLFS
+### END INIT INFO
+
+. /lib/lsb/init-functions
+
+SLAPD_OPTIONS=""
+
+if [ -f "/etc/sysconfig/openldap" ]; then
+   . /etc/sysconfig/openldap
+fi
+
+case "${1}" in
+   start)
+
+      if [ ! -d /var/run/openldap ]; then
+         install -d -o root -g root -m 755 /var/run/openldap
+      fi
+
+      log_info_msg "Starting OpenLDAP"
+
+      if [ -z "$SLAPD_SERVICES" ]; then
+         start_daemon /usr/sbin/slapd $SLAPD_OPTIONS
+      else
+         start_daemon /usr/sbin/slapd -h "$SLAPD_SERVICES" $SLAPD_OPTIONS
+      fi
+      ;;
+
+   stop)
+      log_info_msg "Stopping OpenLDAP"
+      killproc /usr/sbin/slapd
+      ;;
+
+   restart)
+      ${0} stop
+      sleep 1
+      ${0} start
+      ;;
+
+   status)
+      statusproc /usr/sbin/slapd
+      ;;
+
+   *)
+      echo "Usage: ${0} {start|stop|restart|status}"
+      exit 1
+      ;;
+esac
+
+exit 0
+
+# End openldap
